--- a/index.html
+++ b/index.html
@@ -1,114 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="UTF-8">
-   
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-   <link rel="stylesheet" href="style.css">
-   
-   <title>Galeria dos Tênis</title>
-   
+	<meta charset="UTF-8">
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="style.css">
+
+	<title>Galeria dos Tênis</title>
+
 </head>
 
 
 <body>
-  <!-- Cabeçalho -->
-<header>
-    <h1>LOJA</h1>
+	<!-- Cabeçalho -->
+	<header>
+		<h1>NIKE</h1>
 	</header>
 
 
 
 
-  <!-- Grid de produtos -->
-    <main class="container">
-        <section class="products-container">
-	        <div class="card">
-			    <div class="product-image" id="img-1">
-				    <h3>Tênis</h3>
+	<!-- Grid de produtos -->
+	<main class="container">
+		<section class="products-container">
+			<div class="card">
+				<div class="product-image" id="img-1">
+					<h3>Tênis Nike Revolution 5</h3>
 					<p>Este tênis é muito bom pelo fato de...</p>
 					<p>
-					    R$ 
-						<span class="bold">129.99</span>
+						R$
+						<span class="bold">229,99</span>
 					</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>			
+					<a href="#" class="btn">Comprar</a>
+				</div>
+			</div>
 
 
- <div class="card">
-			    <div class="product-image" id="img-2">
-				    <h3>Têni</h3>
+			<div class="card">
+				<div class="product-image" id="img-2">
+					<h3>Tênis Nike Revolution 6</h3>
 					<p>Este tênis é muito bom pelo fato de...</p>
 					<p>
-					    R$ 
-						<span class="bold">129.99</span>
+						R$
+						<span class="bold">319,99</span>
 					</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>			
+					<a href="#" class="btn">Comprar</a>
+				</div>
+			</div>
 
 
- <div class="card">
-			    <div class="product-image" id="img-3">
-				    <h3>Tên</h3>
+			<div class="card">
+				<div class="product-image" id="img-3">
+					<h3>Tênis Nike Revolution 9</h3>
 					<p>Este tênis é muito bom pelo fato de...</p>
 					<p>
-					    R$ 
-						<span class="bold">129.99</span>
+						R$
+						<span class="bold">449,99</span>
 					</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>			
+					<a href="#" class="btn">Comprar</a>
+				</div>
+			</div>
 
-			 <div class="card">
-			    <div class="product-image" id="img-4">
-				    <h3>Tê</h3>
+			<div class="card">
+				<div class="product-image" id="img-4">
+					<h3>Tênis Nike Air Max</h3>
 					<p>Este tênis é muito bom pelo fato de...</p>
 					<p>
-					    R$ 
-						<span class="bold">129.99</span>
+						R$
+						<span class="bold">559,99</span>
 					</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>			
-			
-			 <div class="card">
-			    <div class="product-image" id="img-5">
-				    <h3>T</h3>
+					<a href="#" class="btn">Comprar</a>
+				</div>
+			</div>
+
+			<div class="card">
+				<div class="product-image" id="img-5">
+					<h3>Tênis Nike ZoomX Run</h3>
 					<p>Este tênis é muito bom pelo fato de...</p>
 					<p>
-					    R$ 
-						<span class="bold">129.99</span>
+						R$
+						<span class="bold">1.498,99</span>
 					</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>			
-			
-			 <div class="card">
-			    <div class="product-image" id="img-6">
-				    <h3>Tênis</h3>
+					<a href="#" class="btn">Comprar</a>
+				</div>
+			</div>
+
+			<div class="card">
+				<div class="product-image" id="img-6">
+					<h3>Tênis Nike Invincible Run</h3>
 					<p>Este tênis é muito bom pelo fato de...</p>
 					<p>
-					    R$ 
-						<span class="bold">129.99</span>
+						R$
+						<span class="bold">1.899,99</span>
 					</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-            </div>			
-			
-			
-		</section>    
-    </main>
-	
-  <!-- Rodapé -->
-    <footer>
-	    <p>Galeria dos tênis 2023</p>
+					<a href="#" class="btn">Comprar</a>
+				</div>
+			</div>
+
+
+		</section>
+	</main>
+
+	<!-- Rodapé -->
+	<footer>
+		<p>© 2023 Nike.Todos os direitos reservados</p>
 	</footer>
-	
+
 </body>
 
 </html>
